--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -7,43 +7,40 @@
     tools:context=".fragment.FavoriteFragment">
 
     <androidx.appcompat.widget.AppCompatImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:src="@drawable/thankyou" />
+        android:id="@+id/image_top_thankyou"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/thankyou_top_image"
+        android:layout_marginTop="28dp"
+        android:layout_centerHorizontal="true"/>
 
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/text_order_thankyou"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/thankyou_for_ordering"
+        android:layout_below="@id/image_top_thankyou"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="8dp"/>
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/thankyou_logo"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:src="@drawable/flower_valley_logo"
+        android:layout_below="@+id/text_order_thankyou"
+        android:layout_centerHorizontal="true"/>
 
     <androidx.appcompat.widget.AppCompatTextView
-        android:layout_width="368dp"
-        android:layout_height="62dp"
-        android:layout_marginTop="400dp"
-        android:layout_marginLeft="20dp"
-        android:background="#00a67a"
-        android:fontFamily="@font/poppins_medium"
-        android:paddingTop="12dp"
-        android:text="Flowers Valley"
-        android:textAlignment="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/thankyou_logo"
+        android:text="@string/app_name"
         android:textColor="@color/white"
-        android:textSize="22sp">
+        android:layout_centerHorizontal="true"
+        android:textSize="28sp"/>
 
-    </androidx.appcompat.widget.AppCompatTextView>
-
-
-    <com.google.android.material.button.MaterialButton
-        android:layout_width="368dp"
-        android:layout_height="62dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="40dp"
-        android:background="@drawable/thankyou_btn_design"
-        android:fontFamily="@font/poppins_medium"
-        android:text="SHOP MORE"
-        android:textColor="@color/white"
-        android:textSize="20sp">
-
-
-    </com.google.android.material.button.MaterialButton>
-
+  
 
 
 
