--- a/app/src/main/res/layout/fragment_o_t_p_verification.xml
+++ b/app/src/main/res/layout/fragment_o_t_p_verification.xml
@@ -50,19 +50,28 @@
         android:background="@drawable/view_all_recycler_bg"
         android:orientation="vertical">
 
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="18dp"
+            android:text="Verify Account"
+            android:textColor="@color/green_700"
+            android:textSize="22sp" />
+
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/otp_login_icon"
             android:layout_width="100dp"
             android:layout_height="90dp"
             android:layout_gravity="center"
-            android:layout_marginTop="28dp"
+            android:layout_marginTop="8dp"
             android:src="@drawable/otpa_verification_icon" />
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="26dp"
+            android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:gravity="center">
 
@@ -72,7 +81,7 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:fontFamily="@font/poppins_medium"
-                android:text="@string/verify_otp"
+                android:text="We have sand OTP in your\n            Mobile number"
                 android:textColor="@color/green_200"
                 android:textSize="20sp" />
 
@@ -82,7 +91,6 @@
         <androidx.appcompat.widget.LinearLayoutCompat
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="26dp"
             android:gravity="center"
             android:orientation="vertical"
             android:padding="16dp">
@@ -114,6 +122,16 @@
                 android:layout_marginTop="16dp"
                 android:text="@string/verify"
                 android:textColor="@color/green_700" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:fontFamily="@font/poppins_medium"
+                android:text="Resend OTP"
+                android:textColor="@color/green_700" />
+
+
         </androidx.appcompat.widget.LinearLayoutCompat>
 
 
