profile,cart,favorite UI complete

--- a/app/src/main/res/layout/fragment_o_t_p_verification.xml
+++ b/app/src/main/res/layout/fragment_o_t_p_verification.xml
@@ -100,7 +100,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
                 android:gravity="center"
-                android:hint="OTP"
+                android:hint="Enter OTP"
                 android:textAlignment="center"
                 app:boxBackgroundColor="@color/white">
 
