--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,9 +6,11 @@
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
+    <color name="light_black">#4B000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="green_200">#0DB186</color>
     <color name="green_500">#D300A67A</color>
     <color name="green_700">#00a67a</color>
+    <color name="light_white">#DAE7ECEA</color>
 
 </resources>
