--- a/app/src/main/res/layout/flower_design_item.xml
+++ b/app/src/main/res/layout/flower_design_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView
-    android:layout_width="160dp"
-    android:layout_height="200dp"
+    android:layout_width="140dp"
+    android:layout_height="160dp"
     android:layout_margin="10dp"
     android:foreground="?android:attr/selectableItemBackground"
     xmlns:android="http://schemas.android.com/apk/res/android">
@@ -14,15 +14,15 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/flower_image"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:src="@drawable/img_item_flower" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_margin="10dp"
-            android:background="@color/black" />
+            android:layout_margin="6dp"
+            android:background="@color/light_black" />
 
 
         <RelativeLayout
@@ -44,13 +44,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/flower_name1"
-                android:text="Rs 250"
+                android:textColor="@color/green_200"
+                android:text=" Rs 250"
                 android:textSize="15sp" />
 
 
             <androidx.appcompat.widget.AppCompatImageView
-                android:layout_width="50dp"
-                android:layout_height="50dp"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
                 android:src="@drawable/ic_add" />
