--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,7 +17,7 @@
         android:id="@+id/home_text_valley"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="80dp"
+        android:layout_marginStart="85dp"
         android:layout_marginTop="30dp"
         android:fontFamily="@font/poppins_medium"
         android:text="@string/flower_valley"
@@ -40,7 +40,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/home_text_valley"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="28dp"
         android:background="@drawable/view_all_recycler_bg"
         android:orientation="vertical">
 
@@ -48,7 +48,7 @@
         <androidx.cardview.widget.CardView
             android:id="@+id/card_view"
             android:layout_width="match_parent"
-            android:layout_height="140dp"
+            android:layout_height="160dp"
             android:layout_below="@id/home_app_bar"
             android:layout_marginLeft="18dp"
             android:layout_marginTop="15dp"
@@ -60,7 +60,7 @@
             <com.denzcoskun.imageslider.ImageSlider
                 android:id="@+id/image_slider"
                 android:layout_width="match_parent"
-                android:layout_height="140dp"
+                android:layout_height="160dp"
                 app:iss_corner_radius="15"
                 app:iss_delay="0"
                 app:iss_period="1000">
@@ -73,7 +73,7 @@
             android:layout_width="match_parent"
             android:layout_height="80dp"
             android:layout_below="@id/card_view"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="18dp"
             android:orientation="horizontal">
 
             <androidx.cardview.widget.CardView
@@ -154,28 +154,29 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/card_view"
             android:layout_marginLeft="12dp"
-            android:layout_marginTop="18dp"
+            android:layout_marginTop="46dp"
             android:layout_marginRight="20dp">
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/popular_items"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="12dp"
                 android:layout_marginTop="8dp"
                 android:fontFamily="@font/poppins_medium"
                 android:text="@string/popular_items"
-                android:textSize="20sp" />
+                android:textSize="22sp" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/view_all"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="68dp"
+                android:layout_marginLeft="92dp"
                 android:layout_marginTop="8dp"
                 android:fontFamily="@font/poppins_medium"
                 android:text="@string/view_all"
-                android:textColor="#CD5858"
-                android:textSize="20sp" />
+                android:textColor="@color/green_200"
+                android:textSize="16sp" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
