--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -105,7 +105,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="8dp"
-                android:hint="@string/mobile"
+                android:hint="@string/enter_mobile_number"
                 app:boxBackgroundColor="@color/white"
                 app:startIconDrawable="@drawable/ic_call">
 
