--- a/app/src/main/res/layout/view_all_design.xml
+++ b/app/src/main/res/layout/view_all_design.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView
-    android:layout_width="150dp"
-    android:layout_height="180dp"
-    android:layout_margin="8dp"
+    android:layout_width="140dp"
+    android:layout_height="160dp"
+    android:layout_margin="5dp"
     android:foreground="?android:attr/selectableItemBackground"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
@@ -22,7 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:layout_margin="6dp"
-            android:background="@color/black" />
+            android:background="@color/light_black" />
 
 
         <RelativeLayout
@@ -44,6 +44,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/flower_name"
+                android:textColor="@color/green_200"
                 android:text="Rs. 250"
                 android:textSize="15sp" />
 
