--- a/app/src/main/res/layout/fragment_view_all_recycler.xml
+++ b/app/src/main/res/layout/fragment_view_all_recycler.xml
@@ -15,6 +15,7 @@
 
 
         <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/arrow_popular_items"
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:layout_alignParentStart="true"
