--- a/app/src/main/res/layout/flower_card_recyclerview.xml
+++ b/app/src/main/res/layout/flower_card_recyclerview.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView
-    android:layout_width="150dp"
-    android:layout_height="180dp"
-    android:layout_margin="4dp"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="182dp"
+    android:id="@+id/card"
+    android:layout_height="215dp"
     android:foreground="?android:attr/selectableItemBackground"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    android:layout_margin="10dp">
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
@@ -14,47 +14,50 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/flower_image"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:src="@drawable/img_item_flower" />
+            android:layout_width="105dp"
+            android:layout_height="105dp"
+            android:padding="4dp" />
 
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_margin="6dp"
+            android:layout_margin="10dp"
             android:background="@color/light_black" />
 
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp">
+            android:layout_marginStart="12dp"
+            android:layout_marginEnd="12dp">
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/flower_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/poppins_medium"
-                android:text="@string/rose"
-                android:textSize="18sp" />
+                android:text="@string/angle"
+                android:textSize="20sp" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:id="@+id/flower_price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/flower_name"
-                android:textColor="@color/green_200"
-                android:text="Rs. 250"
-                android:textSize="15sp" />
+                android:layout_below="@+id/flower_name"
+                android:text="340"
+                android:textSize="18sp" />
 
-            <androidx.appcompat.widget.AppCompatImageView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
+
+            <androidx.appcompat.widget.AppCompatImageButton
+                android:id="@+id/btn_add_item"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
-                android:src="@drawable/ic_add" />
-
+                android:background="@drawable/login_btn"
+                android:src="@drawable/ic_baseline_add_24" />
         </RelativeLayout>
+
     </androidx.appcompat.widget.LinearLayoutCompat>
+
 </androidx.cardview.widget.CardView>
