--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="light_black">#4B000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="green_200">#0DB186</color>
+    <color name="light_green">#8BCABA</color>
     <color name="green_500">#D300A67A</color>
     <color name="green_700">#00a67a</color>
     <color name="light_white">#DAE7ECEA</color>
