--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,16 @@
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="ThemeOverlay.SearchView" parent="Theme.FlowerValley">
+    <!-- Text color -->
+        <item name="android:editTextColor">@color/light_white</item>
+        <item name="android:hint">Red Rose</item>
+        <item name="hintTextColor">@color/green_700</item>
+        <item name="fontFamily">@font/poppins_medium</item>
+        <item name="android:textSize">16sp</item>
+        <!-- Hint text color -->
+        <item name="android:textColorHint">@color/light_black</item>
+    </style>
+
 </resources>
