--- a/app/src/main/res/drawable/login_btn.xml
+++ b/app/src/main/res/drawable/login_btn.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <solid android:color="#DC00A67A"/>
+    <solid android:color="@color/green_700"/>
     <corners android:radius="40dp"/>
 
 </shape>
