--- a/app/src/main/res/layout/flower_card_recyclerview.xml
+++ b/app/src/main/res/layout/flower_card_recyclerview.xml
@@ -1,30 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="182dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/card"
-    android:layout_height="215dp"
-    android:foreground="?android:attr/selectableItemBackground"
-    android:layout_margin="10dp">
-
+    android:layout_width="160dp"
+    android:layout_height="210dp"
+    android:layout_marginLeft="10dp"
+    android:layout_marginBottom="5dp"
+    android:layout_marginTop="5dp"
+    app:cardCornerRadius="10dp"
+    android:foreground="?android:attr/selectableItemBackground">
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
         android:orientation="vertical">
-
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/flower_image"
-            android:layout_width="105dp"
-            android:layout_height="105dp"
+            android:layout_width="120dp"
+            android:src="@drawable/third_flower_icon"
+            android:layout_height="120dp"
             android:padding="4dp" />
-
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_margin="10dp"
+            android:layout_margin="5dp"
             android:background="@color/light_black" />
-
-
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -35,6 +35,7 @@
                 android:id="@+id/flower_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="1dp"
                 android:fontFamily="@font/poppins_medium"
                 android:text="@string/angle"
                 android:textSize="20sp" />
@@ -44,18 +45,20 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/flower_name"
-                android:text="340"
-                android:textSize="18sp" />
+                android:fontFamily="@font/poppins_black"
+                android:text="Rs. 340"
+                android:textColor="@color/light_green"
+                android:textSize="16sp" />
 
 
             <androidx.appcompat.widget.AppCompatImageButton
                 android:id="@+id/btn_add_item"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:background="@drawable/login_btn"
-                android:src="@drawable/ic_baseline_add_24" />
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_alignParentRight="true"
+                android:layout_marginTop="22dp"
+                android:background="@drawable/ic_add" />
+
         </RelativeLayout>
 
     </androidx.appcompat.widget.LinearLayoutCompat>
