--- a/app/src/main/res/layout/flower_design_item.xml
+++ b/app/src/main/res/layout/flower_design_item.xml
@@ -1,61 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView
     android:layout_width="150dp"
-    android:layout_height="180dp"
+    android:layout_height="200dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="10dp"
+    app:cardCornerRadius="18dp"
     android:foreground="?android:attr/selectableItemBackground"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <androidx.appcompat.widget.LinearLayoutCompat
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/flower_image"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
+            android:layout_width="160dp"
+            android:layout_height="120dp"
+            android:layout_marginLeft="15dp"
+            android:layout_marginTop="7dp"
+            android:layout_marginRight="15dp"
+            android:scaleType="centerInside"
             android:src="@drawable/img_item_flower" />
-
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_margin="6dp"
-            android:background="@color/light_black" />
+            android:id="@+id/single_line"
+            android:layout_below="@id/flower_image"
+            android:layout_marginLeft="15dp"
+            android:layout_marginRight="15dp"
+            android:layout_marginTop="10dp"
 
+            android:background="@color/black" />
 
-        <RelativeLayout
-            android:layout_width="match_parent"
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/flower_name"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp">
+            android:layout_below="@id/single_line"
+            android:layout_marginLeft="10dp"
 
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/flower_name1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/poppins_medium"
-                android:text="@string/rose"
-                android:textSize="18sp" />
+            android:text="Angle"
+            android:textSize="20dp" />
 
-            <androidx.appcompat.widget.AppCompatTextView
-                android:id="@+id/flower_price"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/flower_name1"
-                android:textColor="@color/green_200"
-                android:text=" Rs 250"
-                android:textSize="15sp" />
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/flower_price"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/flower_name"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="5dp"
+            android:text="₹576.00"
+            android:textSize="20dp" />
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_below="@id/single_line"
+            android:layout_marginStart="95dp"
+            android:layout_marginTop="10dp"
+            android:background="@drawable/ic_add" />
 
 
-            <androidx.appcompat.widget.AppCompatImageView
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
-                android:src="@drawable/ic_add" />
-
-        </RelativeLayout>
-    </androidx.appcompat.widget.LinearLayoutCompat>
-</androidx.cardview.widget.CardView>
+    </RelativeLayout></androidx.cardview.widget.CardView>
