--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -7,125 +7,125 @@
     tools:context=".fragment.CartFragment">
 
 
-    <androidx.appcompat.widget.AppCompatTextView
-        android:layout_width="40dp"
-        android:layout_height="40dp"
-        android:layout_marginLeft="15dp"
-        android:layout_marginTop="15dp"
-        android:background="@drawable/ic_baseline_arrow_back_ios_24" />
+<!--    <androidx.appcompat.widget.AppCompatTextView-->
+<!--        android:layout_width="40dp"-->
+<!--        android:layout_height="40dp"-->
+<!--        android:layout_marginLeft="15dp"-->
+<!--        android:layout_marginTop="15dp"-->
+<!--        android:background="@drawable/ic_baseline_arrow_back_ios_24" />-->
 
-    <com.denzcoskun.imageslider.ImageSlider
-        android:id="@+id/image_slider"
-        android:layout_width="wrap_content"
-        android:layout_height="290dp"
-        app:iss_auto_cycle="true"
-        app:iss_corner_radius="50"
-        app:iss_delay="0"
-        app:iss_period="1000" />
+<!--    <com.denzcoskun.imageslider.ImageSlider-->
+<!--        android:id="@+id/image_slider"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="290dp"-->
+<!--        app:iss_auto_cycle="true"-->
+<!--        app:iss_corner_radius="50"-->
+<!--        app:iss_delay="0"-->
+<!--        app:iss_period="1000" />-->
 
-    <androidx.cardview.widget.CardView
-        android:elevation="4dp"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginBottom="50dp"
-        android:layout_below="@id/image_slider"
-        android:layout_alignParentEnd="true"
-        android:layout_marginEnd="50dp"
-        app:cardCornerRadius="50dp">
+<!--    <androidx.cardview.widget.CardView-->
+<!--        android:elevation="4dp"-->
+<!--        android:layout_width="50dp"-->
+<!--        android:layout_height="50dp"-->
+<!--        android:layout_marginBottom="50dp"-->
+<!--        android:layout_below="@id/image_slider"-->
+<!--        android:layout_alignParentEnd="true"-->
+<!--        android:layout_marginEnd="50dp"-->
+<!--        app:cardCornerRadius="50dp">-->
 
-        <androidx.appcompat.widget.AppCompatImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:padding="8dp"
-            android:src="@drawable/ic_favorite" />
+<!--        <androidx.appcompat.widget.AppCompatImageView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:padding="8dp"-->
+<!--            android:src="@drawable/ic_favorite" />-->
 
-    </androidx.cardview.widget.CardView>
+<!--    </androidx.cardview.widget.CardView>-->
 
-    <androidx.appcompat.widget.LinearLayoutCompat
-        android:id="@+id/bottom_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@id/image_slider"
-        android:background="@drawable/cart_edit_bg"
-        android:orientation="vertical">
+<!--    <androidx.appcompat.widget.LinearLayoutCompat-->
+<!--        android:id="@+id/bottom_layout"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent"-->
+<!--        android:layout_below="@id/image_slider"-->
+<!--        android:background="@drawable/cart_edit_bg"-->
+<!--        android:orientation="vertical">-->
 
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/flower_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="24dp"
-            android:layout_marginTop="34dp"
-            android:text="Jannien Flower Bouquet"
-            android:textColor="@color/white"
-            android:textSize="22sp" />
+<!--        <androidx.appcompat.widget.AppCompatTextView-->
+<!--            android:id="@+id/flower_name"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginLeft="24dp"-->
+<!--            android:layout_marginTop="34dp"-->
+<!--            android:text="Jannien Flower Bouquet"-->
+<!--            android:textColor="@color/white"-->
+<!--            android:textSize="22sp" />-->
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/flower_name"
-            android:layout_marginLeft="25dp"
-            android:text="Includes: Jannien Flower,Lily leaves"
-            android:textColor="@color/white" />
+<!--        <androidx.appcompat.widget.AppCompatTextView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_below="@id/flower_name"-->
+<!--            android:layout_marginLeft="25dp"-->
+<!--            android:text="Includes: Jannien Flower,Lily leaves"-->
+<!--            android:textColor="@color/white" />-->
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/flower_name"
-            android:layout_marginLeft="25dp"
-            android:layout_marginTop="20dp"
-            android:text="₹567.00"
-            android:textColor="@color/white"
-            android:textSize="30dp" />
+<!--        <androidx.appcompat.widget.AppCompatTextView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_below="@id/flower_name"-->
+<!--            android:layout_marginLeft="25dp"-->
+<!--            android:layout_marginTop="20dp"-->
+<!--            android:text="₹567.00"-->
+<!--            android:textColor="@color/white"-->
+<!--            android:textSize="30dp" />-->
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginRight="20dp"
-            android:background="@color/white" />
+<!--        <View-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="1dp"-->
+<!--            android:layout_marginLeft="20dp"-->
+<!--            android:layout_marginTop="15dp"-->
+<!--            android:layout_marginRight="20dp"-->
+<!--            android:background="@color/white" />-->
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+<!--        <androidx.appcompat.widget.AppCompatTextView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
 
-            android:layout_marginLeft="25dp"
-            android:layout_marginTop="8dp"
-            android:text="About"
-            android:textColor="@color/white"
-            android:textSize="25dp" />
+<!--            android:layout_marginLeft="25dp"-->
+<!--            android:layout_marginTop="8dp"-->
+<!--            android:text="About"-->
+<!--            android:textColor="@color/white"-->
+<!--            android:textSize="25dp" />-->
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+<!--        <androidx.appcompat.widget.AppCompatTextView-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
 
-            android:layout_marginLeft="25dp"
-            android:layout_marginTop="8dp"
-            android:text="Lorem lpsum is simple dummy text of the printing and typesetting industry. Lorem lpsum has been the industry's standard dummy text ever since the 1500s."
+<!--            android:layout_marginLeft="25dp"-->
+<!--            android:layout_marginTop="8dp"-->
+<!--            android:text="Lorem lpsum is simple dummy text of the printing and typesetting industry. Lorem lpsum has been the industry's standard dummy text ever since the 1500s."-->
 
-            android:textColor="@color/white" />
+<!--            android:textColor="@color/white" />-->
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+<!--        <RelativeLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content">-->
 
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/add_to_cart_btn"
-                android:layout_width="match_parent"
-                android:layout_height="80dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginTop="25dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginBottom="5dp"
-                android:background="@drawable/edit_box"
-                android:text="@string/add_to_cart">
+<!--            <androidx.appcompat.widget.AppCompatButton-->
+<!--                android:id="@+id/add_to_cart_btn"-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="80dp"-->
+<!--                android:layout_marginLeft="20dp"-->
+<!--                android:layout_marginTop="25dp"-->
+<!--                android:layout_marginRight="20dp"-->
+<!--                android:layout_marginBottom="5dp"-->
+<!--                android:background="@drawable/edit_box"-->
+<!--                android:text="@string/add_to_cart">-->
 
-            </androidx.appcompat.widget.AppCompatButton>
+<!--            </androidx.appcompat.widget.AppCompatButton>-->
 
-        </RelativeLayout>
+<!--        </RelativeLayout>-->
 
-    </androidx.appcompat.widget.LinearLayoutCompat>
+<!--    </androidx.appcompat.widget.LinearLayoutCompat>-->
 
 </RelativeLayout>
