--- a/app/src/main/res/layout/fragment_flower_detail.xml
+++ b/app/src/main/res/layout/fragment_flower_detail.xml
@@ -1,14 +1,144 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".fragment.FlowerDetailFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.appcompat.widget.AppCompatTextView
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:layout_marginLeft="15dp"
+        android:id="@+id/back_icon"
+        android:layout_marginTop="15dp"
+        android:background="@drawable/ic_baseline_arrow_back_ios_24" />
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/flower_image"
+        android:layout_width="match_parent"
+        android:layout_height="340dp" />
+
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="280dp"
+        android:layout_height="260dp"
+        android:layout_above="@+id/cart_card_view"
+        android:layout_centerInParent="true"
+        android:layout_marginStart="52dp"
+        android:layout_marginBottom="55dp"
+        app:cardCornerRadius="20dp">
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/flower_details_image"
+            android:layout_width="180dp"
+            android:layout_height="180dp"
+            android:layout_marginLeft="48dp"
+            android:layout_marginTop="28dp" />
+
+    </androidx.cardview.widget.CardView>
+
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cart_card_view"
+        android:elevation="4dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="50dp"
+        android:layout_below="@id/flower_image"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="30dp"
+        app:cardCornerRadius="50dp">
+
+        <androidx.appcompat.widget.AppCompatImageView
+            android:layout_width="28dp"
+            android:layout_height="28dp"
+            android:layout_marginTop="10.2dp"
+            android:layout_marginStart="11.1dp"
+            android:src="@drawable/ic_favorite" />
+    </androidx.cardview.widget.CardView>
+
+
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/bottom_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_below="@id/flower_image"
+        android:background="@drawable/cart_edit_bg"
+        android:orientation="vertical">
 
-</FrameLayout>
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/flower_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="25dp"
+            android:layout_marginTop="26dp"
+            android:text="Jannien Flower Bouquet"
+            android:textColor="@color/white"
+            android:textSize="23sp" />
+
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/flower_price"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/flower_name"
+            android:layout_marginLeft="25dp"
+            android:layout_marginTop="12dp"
+            android:text="₹567.00"
+            android:textColor="@color/white"
+            android:textSize="30dp" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginRight="20dp"
+            android:background="@color/white" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="25dp"
+            android:layout_marginTop="12dp"
+            android:text="About"
+            android:textColor="@color/white"
+            android:textSize="25dp" />
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/flower_about"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="25dp"
+            android:layout_marginTop="10dp"
+            android:text="your about "
+            android:textColor="@color/white" />
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp">
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/add_to_cart_btn"
+                android:layout_width="match_parent"
+                android:layout_height="55dp"
+                android:layout_alignParentBottom="true"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:background="@drawable/edit_box"
+                android:text="@string/add_to_cart">
+
+
+            </androidx.appcompat.widget.AppCompatButton>
+
+        </RelativeLayout>
+
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
+
+
+
+</RelativeLayout>
