--- a/app/src/main/res/layout/fragment_view_all_recycler.xml
+++ b/app/src/main/res/layout/fragment_view_all_recycler.xml
@@ -15,19 +15,19 @@
 
 
         <androidx.appcompat.widget.AppCompatImageView
-            android:id="@+id/arrow_popular_items"
-            android:layout_width="35dp"
-            android:layout_height="35dp"
+            android:id="@+id/back_icon"
+            android:layout_width="28dp"
+            android:layout_height="28dp"
             android:layout_alignParentStart="true"
             android:layout_marginStart="12dp"
-            android:src="@drawable/ic_back" />
+            android:src="@drawable/ic_baseline_arrow_back_ios_24" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:fontFamily="@font/poppins_medium"
-            android:text="@string/popular_flowers"
+
+            android:text="Popular Flowers"
             android:textColor="@color/white"
             android:textSize="22sp" />
 
@@ -44,16 +44,18 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/app_bar"
         android:layout_marginTop="8dp"
-        android:background="@drawable/view_all_recycler_bg"
+        android:background="@drawable/pupular_flower_top_corner"
         android:orientation="vertical">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/flower_recyclerview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="18dp"
-            android:layout_marginEnd="16dp" />
+            android:layout_marginTop="15dp"
+            android:layout_marginRight="14dp"
+            android:layout_marginBottom="10dp"
+
+            />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
