--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -50,7 +50,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
                 android:fontFamily="@font/poppins_medium"
-                android:text="@string/red_rose"
+                android:text="Jasmien Flower Bouquet"
                 android:textSize="16sp" />
 
             <androidx.appcompat.widget.AppCompatTextView
@@ -77,8 +77,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:fontFamily="@font/poppins_medium"
-                android:text="@string/angle_flower_bouquet"
-                android:textSize="15sp" />
+                android:text="Angle Flower Bouquet"
+                android:textSize="15dp" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:layout_width="match_parent"
@@ -87,7 +87,7 @@
                 android:fontFamily="@font/poppins_medium"
                 android:gravity="end"
                 android:text="1 x ₹576.00"
-                android:textSize="15sp" />
+                android:textSize="15dp" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -107,7 +107,7 @@
                 android:layout_marginLeft="10dp"
                 android:fontFamily="@font/poppins_medium"
                 android:text="Delivery Charges"
-                android:textSize="15sp" />
+                android:textSize="15dp" />
 
             <androidx.appcompat.widget.AppCompatTextView
                 android:layout_width="match_parent"
@@ -116,7 +116,7 @@
                 android:fontFamily="@font/poppins_medium"
                 android:gravity="end"
                 android:text="₹50.00"
-                android:textSize="15sp" />
+                android:textSize="15dp" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
@@ -145,7 +145,7 @@
                 android:layout_marginLeft="10dp"
                 android:fontFamily="@font/poppins_medium"
                 android:text="Total Amount Payable"
-                android:textSize="15sp"
+                android:textSize="15dp"
                 android:textStyle="bold" />
 
             <androidx.appcompat.widget.AppCompatTextView
@@ -156,11 +156,12 @@
                 android:gravity="end"
                 android:text="₹1000.00"
                 android:textColor="@color/green_500"
-                android:textSize="15sp" />
+                android:textSize="15dp" />
 
         </androidx.appcompat.widget.LinearLayoutCompat>
 
         <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/check_out"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/total_amount"
@@ -175,5 +176,7 @@
             android:textSize="18sp" />
 
     </RelativeLayout>
+
+
 
 </RelativeLayout>
